2005-11-28  Sven Panne  <sven.panne@aedion.de>

	* src/Makefile.am: Added path to local <AL/alext.h>.

2005-11-26  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: make ASM and CXX detection optional
	
	* src/arch/darwin/darwin_native.c: NULL isn't float nor int;
	Darwin target should now compile using CMake

2005-11-25  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: minor clean-up

	* README: typos...

2005-11-24  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/al_buffer.c, src/al_config.c, src/al_ext.c,
	src/al_ext.h, src/al_listen.c, src/al_main.c, src/al_main.h,
	src/al_rctree.h, src/al_rcvar.c, src/al_rcvar.h, src/al_source.c,
	src/al_types.h, src/mixaudio16.c, src/alc/alc_context.c,
	src/alc/alc_device.c, src/arch/alsa/alsa.c, src/arch/linux/lin_dsp.c,
	src/arch/sdl/sdl.c, src/extensions/al_ext_capture.c,
	src/extensions/al_ext_mp3.c, src/extensions/al_ext_needed.h,
	test/testext.c: Added more GCC warnings and tried to fix some of
	them. The general problem with the code is "primitive obsession".

2005-11-23  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: remove fpic and rdynamic magic - let CMake handle it;
	made CMake build system feature complete

	* README: updated due to feature-completeness

2005-11-21  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: Removed some remnants of the old build system, i.e.
	requirements, DO_MINOR_LIBS, SHARED_LIBRARY_EXT, SHOULD_USE_FPIC and
	SHOULD_USE_RDYNAMIC. Furthermore, some Irix stuff which has been
	commented out for some time now has been nuked.

	* .cvsignore, Makefile.am, admin/.cvsignore, configure.ac,
	include/Makefile.am, src/.cvsignore, src/Makefile.am, src/al_cpu_caps.h:
	More steps towards automake support. Things build and install at least
	on Linux now when all backends are enabled (without MMX).

	* admin/Makefile.am, include/AL/.cvsignore, include/AL/Makefile.am:
	Added.

	* .cvsignore, autogen.sh, src/.cvsignore: Synched with recent